--- a/assets/app.css
+++ b/assets/app.css
@@ -73,3 +73,10 @@ h1.temp {
   top: 0;
   left: 20px;
 }
+.searches {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 1em;
+  color: white;
+}
